# intake-gfs-ncar

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PYPI_RELEASE_SETUP.md
.github/workflows/: build-test.yml  python-tests.yml  release.yml
docs/: conf.py  index.rst
docs/development/: contributing.rst  release_notes.rst
docs/getting_started/: examples.rst  installation.rst  quickstart.rst
docs/user_guide/: configuration.rst  faq.rst
examples/: README.md  example_12h_forecast.py  example_surface_winds.py  example_usage.py  test_intake_driver.py  test_intake_driver_robust.py
examples/dataset_examples/: use_ice_concentration.py  use_surface_winds.py
intake_gfs_ncar/: CHANGES.md  __init__.py  gfs_intake_driver.py
intake_gfs_ncar/tests/: __init__.py  test_catalog_parameters.py  test_parameters.py
scripts/: release.py
tests/: test_gfs_driver.py  test_release_script.py
